// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RecipeDetail /> should correctly assign className 1`] = `
<div
  className="bg-white p2 test-classname"
>
  <h2
    className="h2"
  >
    Test recipe
  </h2>
  <img
    alt="Test recipe"
    className="fit"
  />
  <div>
    <span>
      Test category
    </span>
    <span />
    <h3>
      Ingredients
    </h3>
    <ul>
      <li>
        ing 1
      </li>
      <li>
        ing 2
      </li>
    </ul>
    <h3>
      Steps
    </h3>
    <ol>
      <li>
        step 1
      </li>
      <li>
        step 2
      </li>
    </ol>
  </div>
  <a
    href="/recipe/1"
    onClick={[Function]}
  >
    See More
  </a>
</div>
`;

exports[`<RecipeDetail /> should correctly render recipe 1`] = `
<div
  className="bg-white p2"
>
  <h2
    className="h2"
  >
    Test recipe
  </h2>
  <img
    alt="Test recipe"
    className="fit"
  />
  <div>
    <span>
      Test category
    </span>
    <span />
    <h3>
      Ingredients
    </h3>
    <ul>
      <li>
        ing 1
      </li>
      <li>
        ing 2
      </li>
    </ul>
    <h3>
      Steps
    </h3>
    <ol>
      <li>
        step 1
      </li>
      <li>
        step 2
      </li>
    </ol>
  </div>
  <a
    href="/recipe/1"
    onClick={[Function]}
  >
    See More
  </a>
</div>
`;

exports[`<RecipeDetail /> should recipe render without ingredients 1`] = `
<div
  className="bg-white p2"
>
  <h2
    className="h2"
  >
    Test recipe
  </h2>
  <img
    alt="Test recipe"
    className="fit"
  />
  <div>
    <span>
      Test category
    </span>
    <span />
    <h3>
      Ingredients
    </h3>
    <h3>
      Steps
    </h3>
    <ol>
      <li>
        step 1
      </li>
      <li>
        step 2
      </li>
    </ol>
  </div>
  <a
    href="/recipe/1"
    onClick={[Function]}
  >
    See More
  </a>
</div>
`;

exports[`<RecipeDetail /> should recipe render without steps 1`] = `
<div
  className="bg-white p2"
>
  <h2
    className="h2"
  >
    Test recipe
  </h2>
  <img
    alt="Test recipe"
    className="fit"
  />
  <div>
    <span>
      Test category
    </span>
    <span />
    <h3>
      Ingredients
    </h3>
    <ul>
      <li>
        ing 1
      </li>
      <li>
        ing 2
      </li>
    </ul>
    <h3>
      Steps
    </h3>
  </div>
  <a
    href="/recipe/1"
    onClick={[Function]}
  >
    See More
  </a>
</div>
`;

exports[`<RecipeDetail /> should render without recipe 1`] = `
<div
  className="h3 p2 italic bg-white center"
>
  <p>
    Please select a recipe to view detail.
  </p>
</div>
`;
